--- a/marmelad/_blocks/_layouts/app.styl
+++ b/marmelad/_blocks/_layouts/app.styl
@@ -25,3 +25,11 @@ html
 
   &__main
     flex 1
+
+.contain
+  max-width: 1216px + 8px + 8px
+  width 100%
+  padding-right 8px
+  padding-left 8px
+  margin-right auto
+  margin-left auto
