--- a/marmelad/styles/components/_variables.styl
+++ b/marmelad/styles/components/_variables.styl
@@ -1,8 +1,10 @@
-$system-font = unquote('-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"')
+$system-font = unquote('"ONYForm", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"')
+$additional-font = unquote('"ONYSans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"')
+$text-font = unquote('"ONYSerif", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"')
 
 $colors = {
-  theme: #6fbc95,
-  accent: #BC6F96,
+  theme: #1F1A1A,
+  accent: #8B00FD,
 }
 
 $fonts = {
@@ -15,7 +17,7 @@ $body = {
   fontSize: 1rem,
   fontWeight: 400,
   lineHeight: 1.5,
-  color: #212529,
+  color: #1E0B2E,
   bgc: #fff
 }
 
