--- a/marmelad/_blocks/_layouts/app.html
+++ b/marmelad/_blocks/_layouts/app.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <title>{{ pageTitle }} - {{ app.package.name | capitalize }} v{{ app.package.version }} / {{ git.branch }}</title>
+        <title>{{ pageTitle }}</title>
 
         <meta name="theme-color" content="{{ app.stylus.colors.theme }}">
 
@@ -20,6 +20,7 @@
         <meta name="MobileOptimized" content="320">
         <meta name="HandheldFriendly" content="True">
 
+        <link rel="stylesheet" href="css/plugins.min.css">
         <link rel="stylesheet" href="css/app.css">
 
         {% block inlineStyles %}{% endblock %}
@@ -47,8 +48,6 @@
 
         </div><!-- app:wrapper -->
 
-        {% include 'page-scroller.html' %}
-
 		{{ inlineSvgSprite() }}
 
 		<script>
@@ -58,6 +57,7 @@
 		</script>
 
         <script src="js/vendors/jquery-3.6.0.min.js"></script>
+        <script src="js/plugins.min.js"></script>
         <script src="js/app.js"></script>
 
     </body><!-- app -->
