added top line & first screen & more

--- a/marmelad/styles/components/_variables.styl
+++ b/marmelad/styles/components/_variables.styl
@@ -9,7 +9,8 @@ $colors = {
 
 $fonts = {
   base: $system-font,
-  headings: $system-font
+  additionalFont: $additional-font,
+  textFont: $text-font,
 }
 
 $body = {
