--- a/marmelad/_blocks/_layouts/app.styl
+++ b/marmelad/_blocks/_layouts/app.styl
@@ -1,35 +1,86 @@
-html,
-body
-  margin 0
-  padding 0
+html, body
+  margin: 0
+  padding: 0
 
 html
-  min-height 100%
-  min-height 100vh
+  min-height: 100%
+  min-height: 100vh
 
 .app
-  display flex
-  flex-direction column
-  height 100%
-  height 100vh
+  display: flex
+  flex-direction: column
+  height: 100%
+  height: 100vh
 
   &__wrapper
-    display flex
-    flex-direction column
-    min-height 100%
-    min-height 100vh
+    display: flex
+    flex-direction: column
+    min-height: 100%
+    min-height: 100vh
 
   &__content
-    display flex
-    flex 1 0 auto
+    display: flex
+    flex: 1 0 auto
 
   &__main
-    flex 1
+    flex: 1
 
 .contain
   max-width: 1216px + 8px + 8px
-  width 100%
-  padding-right 8px
-  padding-left 8px
-  margin-right auto
-  margin-left auto
+  width: 100%
+  padding-right: 8px
+  padding-left: 8px
+  margin-right: auto
+  margin-left: auto
+
+.button-default
+  font-size: 16px
+  font-weight: 500
+  line-height: 1
+  text-align: center
+  letter-spacing: 2px
+  text-transform: uppercase
+  text-decoration: none
+  background-color: transparent
+  display: inline-block
+  min-width: 200px
+  max-width: 280px
+  padding: 15px 20px
+  border: 1px solid
+  border-radius: 40px
+  cursor: pointer
+  outline: none !important
+  position: relative
+  transition: color 0.3s, ease 0.3s
+  overflow: hidden
+
+  span
+    position: relative
+    z-index: 2
+
+  &:after
+    content: ''
+    width: 5px
+    height: 5px
+    position: absolute
+    top: 50%
+    left: 50%
+    transform: translate(-50%, -50%)
+    transition: width 0.3s, height 0.3s, background-color 0.3s, ease-in 0.3s
+    border-radius: 50%
+
+  &--light
+    color: #FFF
+    border-color: #fff
+
+    &:hover
+      color: #000
+
+      &:after
+        width: 200px
+        height: 200px
+        background-color: #fff
+
+  &--dark
+    color: #1E0B2E
+    border-color: #1E0B2E
