--- a/marmelad/_blocks/_layouts/app.html
+++ b/marmelad/_blocks/_layouts/app.html
@@ -23,6 +23,8 @@
         <link rel="stylesheet" href="css/plugins.min.css">
         <link rel="stylesheet" href="css/app.css">
 
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
+
         {% block inlineStyles %}{% endblock %}
     </head>
 
