--- a/marmelad/_blocks/_layouts/app.styl
+++ b/marmelad/_blocks/_layouts/app.styl
@@ -25,6 +25,17 @@ html
   &__main
     flex: 1
 
+h2
+  font-size: 20px
+  color: #1E0B2E
+  font-weight: 500
+  line-height: 1.2
+  text-align: center
+  letter-spacing: 1px
+  text-transform: uppercase
+  margin-top: 0
+  margin-bottom: 30px
+
 .contain
   max-width: 1216px + 8px + 8px
   width: 100%
