--- a/marmelad/_blocks/hero/hero.styl
+++ b/marmelad/_blocks/hero/hero.styl
@@ -16,6 +16,12 @@
     @media (max-width: 639px)
       padding: 32px
 
+    &:hover
+      & ^[0]
+        &__img
+          img
+            transform: scale(1.1)
+
   &__img
     width: 100%
     height: 100%
@@ -36,6 +42,7 @@
       vertical-align: top
       object-fit: cover
       object-position: 72% 0
+      transition: transform 1s, ease 1s
 
   &__content
     color: #fff
@@ -61,6 +68,7 @@
     font-weight: 500
     line-height: 1.2
     text-transform: uppercase
+    margin-top: 0
     margin-bottom: 20px
 
     @media (max-width: 639px)
@@ -70,3 +78,12 @@
     @media (max-width: 479px)
       width: 100%
       max-width: 100%
+
+    &:after
+      @media (max-width: 479px)
+        transform-origin: center
+
+    &:hover
+      &:after
+        @media (max-width: 479px)
+          transform: scale(2) translate(-25%, -25%)
