--- a/marmelad/styles/components/fonts.styl
+++ b/marmelad/styles/components/fonts.styl
@@ -2,6 +2,7 @@
   font-family: "ONYForm";
   src: 
     url("../fonts/ONYForm-Medium.otf") format("opentype");
+    url("../fonts/ONYForm-Medium.woff2") format("woff2");
   font-weight: 500;
   font-style: normal;
   font-display: swap;
@@ -10,6 +11,7 @@
   font-family: "ONYSans";
   src: 
     url("../fonts/ONYSans-Book.otf") format("opentype");
+    url('../fonts/ONYSans-Normal.woff2') format('woff2')
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -18,6 +20,7 @@
   font-family: "ONYSerif";
   src: 
     url("../fonts/ONY-Serif-Regular.otf") format("opentype");
+    url('../fonts/ONY-Serif-Regular.woff2') format('woff2')
   font-weight: 400;
   font-style: normal;
   font-display: swap;
