--- a/marmelad/_blocks/_layouts/app.styl
+++ b/marmelad/_blocks/_layouts/app.styl
@@ -95,3 +95,11 @@ h2
   &--dark
     color: #1E0B2E
     border-color: #1E0B2E
+
+    &:hover
+      color: #fff
+
+      &:after
+        width: 200px
+        height: 200px
+        background-color: #8B00FD
