--- a/marmelad/_blocks/articles-day/articles-day.styl
+++ b/marmelad/_blocks/articles-day/articles-day.styl
@@ -1,11 +1,12 @@
 .articles-day
-  padding-top: 80px
-  padding-bottom: 40px
+  padding-top: 60px
   text-align: center
-  overflow: hidden
+
+  @media (max-width: 1279px)
+    overflow: hidden
 
   @media (max-width: 959px)
-    padding-top: 40px
+    padding-top: 20px
 
   &._is-visible
     & ^[0]
@@ -15,6 +16,18 @@
         &:before, &:after
           opacity: 0
 
+  &__head
+    background-color: #fff
+    width: 100%
+    padding-top: 20px
+    padding-bottom: 10px
+    margin-bottom: 50px
+
+    @media (min-width: 1280px)
+      position: sticky
+      top: 0
+      z-index: 50
+
   &__title
     line-height: 1.5
     position: relative
@@ -22,7 +35,8 @@
     vertical-align: top
     padding-right: 10px
     padding-left: 10px
-    margin-bottom: 50px
+    
+    margin-bottom: 0
     transition: letter-spacing 1s, ease-in 1s
 
     @media (max-width: 1023px)
@@ -81,6 +95,13 @@
       @media (max-width: 959px)
         min-height: auto
 
+      & ^[0]
+        &__slider-wrapper
+          @media (min-width: 1280px)
+            position: sticky
+            top: 70px
+            z-index: 45
+
     &--left
       @media (max-width: 1279px)
         flex: 1 1 auto
@@ -119,6 +140,9 @@
 
   &__item
     margin-bottom: 70px
+
+    &:last-child
+      margin-bottom: 0
 
     @media (max-width: 959px)
       padding-right: 15px
