--- a/marmelad/_blocks/other-articles/other-articles.styl
+++ b/marmelad/_blocks/other-articles/other-articles.styl
@@ -1,5 +1,5 @@
 .other-articles
-  padding-top: 90px
+  padding-top: 20px
   padding-bottom: 80px
   position: relative
   z-index: 60
@@ -57,6 +57,9 @@
       top: 0
       z-index: 50
 
+    @media (max-width: 1023px)
+      margin-bottom: 25px
+
   &__title
     line-height: 1.5
     position: relative
@@ -70,7 +73,6 @@
     @media (max-width: 1023px)
       letter-spacing: 20px
       padding-left: 10px
-      margin-bottom: 25px
 
     &:before, &:after
       content: ''
