adedd cat menu & more

--- a/marmelad/_blocks/_layouts/app.styl
+++ b/marmelad/_blocks/_layouts/app.styl
@@ -6,6 +6,9 @@ html
   min-height: 100%
   min-height: 100vh
 
+  &._is-lock
+    overflow: hidden
+
 .app
   display: flex
   flex-direction: column
