--- a/marmelad/_blocks/main-menu/main-menu.styl
+++ b/marmelad/_blocks/main-menu/main-menu.styl
@@ -1,6 +1,4 @@
 .main-menu
-  @media (max-width: 1023px)
-    padding-top: 15px
 
   &__nav
     ul
@@ -10,15 +8,11 @@
       display: flex
       align-items: center
 
-      @media (max-width: 1023px)
-        flex-direction: column
-        align-items: flex-start
-
       li
         margin-right: 50px
 
         @media (max-width: 1023px)
-          margin-right: 0
+          margin-right: 15px
 
         a
           font-size: 15px
@@ -31,10 +25,6 @@
           padding-top: 15px
           padding-bottom: 15px
           position: relative
-
-          @media (max-width: 1023px)
-            padding-top: 10px
-            padding-bottom: 10px
 
           &:after
             content: ''
