--- a/marmelad/_blocks/top-line/top-line.styl
+++ b/marmelad/_blocks/top-line/top-line.styl
@@ -15,6 +15,10 @@
     align-items: center
     height: 100%
 
+    &.contain
+      padding-right: 20px
+      padding-left: 20px
+
   &__button-search
     display: flex
     align-items: center
@@ -42,12 +46,22 @@
       left: 50%
       transform: translateX(-50%)
       background-color: #1E0B2E
+      transition: transform 0.3s, ease 0.3s
 
     &:before
       top: 10px
 
     &:after
       bottom: 10px
+
+    &._is-active
+      &:before
+        top: 14px
+        transform: translateX(-50%) rotate(-45deg)
+
+      &:after
+        bottom: 16px
+        transform: translateX(-50%) rotate(45deg)
 
   &__links
     display: flex
@@ -67,6 +81,9 @@
       align-items: center
       margin-right: 50px
 
+      @media (max-width: 1023px)
+        margin-right: 20px
+
       span
         margin-right: 5px
 
@@ -81,33 +98,6 @@
     border-bottom: 1px solid #ECE4F0
     position: relative
     z-index: 1
-    margin-top: -50px
-    visibility: hidden
-    transition: margin-top 0.4s, ease 0.4s
 
-    @media (max-width: 1023px)
-      position: absolute
-      top: 100%
-      left: 0
-      width: 100%
-      height: 100vh
-      background-color: #fff
-      z-index: 50
-      margin-top: 0
-      opacity: 0
-      transform: translateY(-50px)
-      transition: opacity 0.4s, transform 0.4s, ease 0.4s
-
-    &._is-show
-      margin-top: 0
-      visibility: visible
-
-      @media (max-width: 1023px)
-        opacity: 1
-        transform: translateY(0)
-
-    & ^[0]
-      &__inner
-        @media (max-width: 1023px)
-          flex-direction: column
-          align-items: flex-start
+    @media (max-width: 767px)
+      display: none
