--- a/marmelad/_blocks/news-slider/news-slider.styl
+++ b/marmelad/_blocks/news-slider/news-slider.styl
@@ -262,29 +262,47 @@
       padding-top: 20px
       text-align: center
 
-      // &:before
-      // content: ''
-      // position: absolute
-      // bottom: 0
-      // left: 0
-      // width: 100%
-      // height: 50%
-      // background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #FFFFFF 62.5%)
-      // opacity: 0.8
-      // filter: blur(32px)
-      // z-index 2
+      &:before
+        content: ''
+        position: absolute
+        bottom: 0
+        left: 0
+        width: 100%
+        height: 50%
+        background: linear-gradient(0deg, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)), linear-gradient(0deg, rgba(139, 0, 253, 0.2), rgba(139, 0, 253, 0.2)), linear-gradient(0deg, rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), linear-gradient(180deg, rgba(0, 0, 0, 0) 59.9%, rgba(0, 0, 0, 0.5) 81.77%)
+        opacity: 0.8
+        filter: blur(32px)
 
-      // &:after
-      // content: ''
-      // position: absolute
-      // bottom: 0
-      // left: 0
-      // width: 100%
-      // height: 50%
-      // background: linear-gradient(180deg, #C300FF 0%, #C300FF 62.5%)
-      // opacity: 0.4
-      // filter: blur(32px)
-      // z-index 2
+        @media (max-width: 959px)
+          display: none
+
+      &:after
+        content: ''
+        position: absolute
+        bottom: 0
+        left: 0
+        width: 100%
+        height: 50%
+        background: linear-gradient(180deg, #C300FF 0%, #C300FF 62.5%)
+        opacity: 0.4
+        filter: blur(32px)
+
+        @media (max-width: 959px)
+          display: none
+
+      .fill-card
+        position: absolute
+        bottom: 0
+        left: 0
+        width: 100%
+        height: 50%
+        background: linear-gradient(0deg, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)), linear-gradient(0deg, rgba(139, 0, 253, 0.2), rgba(139, 0, 253, 0.2)), linear-gradient(0deg, rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), linear-gradient(180deg, rgba(0, 0, 0, 0) 59.9%, rgba(0, 0, 0, 0.5) 81.77%)
+        opacity: 1
+        filter: blur(32px)
+
+        @media (max-width: 959px)
+          display: none
+
       &:nth-child(1)
         bottom: 32px * 2
         width: 80%
@@ -300,6 +318,9 @@
       &:nth-child(4)
         bottom: 30px * 5
         width: 100%
+
+        &:before, &:after, .fill-card
+          opacity: 0
 
         img
           opacity: 1
