--- a/marmelad/_blocks/articles-day/articles-day.styl
+++ b/marmelad/_blocks/articles-day/articles-day.styl
@@ -16,6 +16,16 @@
         &:before, &:after
           opacity: 0
 
+  &__section
+    &._is-fixed-section
+      position: fixed
+      top: 0
+      left: 0
+      width: 100%
+      height: 100%
+      background-color: #fff
+      z-index: 500
+
   &__head
     background-color: #fff
     width: 100%
@@ -71,6 +81,7 @@
   &__cols
     width: 100%
     display: flex
+    transition: transform 0.3s, ease 0.3s
 
     @media (max-width: 1279px)
       flex-wrap: wrap
@@ -140,9 +151,9 @@
       justify-content: center
 
   &__item
-    margin-bottom: 70px
+    padding-bottom: 70px
 
     @media (max-width: 959px)
       padding-right: 15px
       padding-left: 15px
-      margin-bottom: 50px
+      // margin-bottom: 50px
