--- a/marmelad/_blocks/_layouts/app.styl
+++ b/marmelad/_blocks/_layouts/app.styl
@@ -89,6 +89,7 @@ h2
 
     &:hover
       color: #000
+      border-color: transparent
 
       &:after
         width: 200px
@@ -100,6 +101,7 @@ h2
     border-color: #1E0B2E
 
     &:hover
+      border-color: #8B00FD
       color: #fff
 
       &:after
