--- a/marmelad/_blocks/article-thumb/article-thumb.styl
+++ b/marmelad/_blocks/article-thumb/article-thumb.styl
@@ -11,6 +11,11 @@
 
   &:hover
     & ^[0]
+      &__img
+        &:after
+          opacity: 1
+          visibility: visible
+
       &__content
         &:before
           background-color: #C300FF
@@ -65,6 +70,20 @@
     margin-right: auto
     margin: 0 auto 25px auto
     display: block
+    position: relative
+
+    &:after
+      content: ''
+      position: absolute
+      left: 50%
+      bottom: -47px
+      transform: translateX(-50%)
+      width: 280px
+      height: 47px
+      background: radial-gradient(62.14% 168.18% at 50% -68.18%, #C300FF 0%, rgba(195, 0, 255, 0.88456) 5.21%, rgba(195, 0, 255, 0.148632) 63.54%, rgba(195, 0, 255, 0) 90.54%)
+      opacity: 0
+      visibility: hidden
+      transition: opacity 0.3s, ease 0.3s
 
     img
       vertical-align: top
@@ -196,6 +215,10 @@
     background-color: rgba(211, 206, 214, 0.16)
     border-radius: 4px
     margin-right: 15px
+    transition: color 0.3s, ease 0.3s
+
+    &:hover
+      color: #9900FF
 
     &:last-child
       margin-right: 0
