--- a/marmelad/_blocks/category-menu/category-menu.styl
+++ b/marmelad/_blocks/category-menu/category-menu.styl
@@ -40,6 +40,7 @@
           display: flex
           padding-top: 20px
           padding-bottom: 20px
+          transition: color 0.5s, ease 0.5s
 
           @media (max-width: 767px)
             font-size: 24px
@@ -57,10 +58,16 @@
             transition: width 0.5s, ease-in 0.5s
 
           &:hover
+            color: #9900FF
+
             &:before
               // right: initial
               // left: 50%
               width: 100%
+
+            span
+              &:after
+                background-image: url("data:image/svg+xml,%3Csvg width='9' height='15' viewBox='0 0 9 15' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0.75 13.75L7.25 7.25L0.75 0.75' stroke='%239900FF' stroke-width='2'/%3E%3C/svg%3E%0A")
 
           span
             max-width: 1216px + 8px + 8px
@@ -112,6 +119,7 @@
               align-self: center
               margin-left: auto
               margin-right: 8px
+              transition: background 0.5s, ease 0.5s
 
               @media (max-width: 767px)
                 margin-left: 10px
@@ -119,6 +127,14 @@
 
           &.color-mode
             color: #2E9500
+
+            &:hover
+              &:before
+                background-color: #2E9500
+              
+              span
+                &:after
+                  background-image: url("data:image/svg+xml,%3Csvg width='9' height='15' viewBox='0 0 9 15' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0.75 13.75L7.25 7.25L0.75 0.75' stroke='%232E9500' stroke-width='2'/%3E%3C/svg%3E%0A")  
 
             small
               color: #2E9500
