--- a/marmelad/_blocks/main-menu/main-menu.styl
+++ b/marmelad/_blocks/main-menu/main-menu.styl
@@ -14,6 +14,9 @@
         @media (max-width: 1023px)
           margin-right: 15px
 
+        &.is-active
+          a
+            color #8b00fd
         a
           font-size: 15px
           color: #1E0B2E
@@ -42,3 +45,9 @@
               right: initial
               left: 0
               width: 100%
+          &.color-mode
+            color: #2E9500
+
+            &:hover
+              &:after
+                background-color: #2E9500
