--- a/marmelad/_blocks/news-slider/news-slider.styl
+++ b/marmelad/_blocks/news-slider/news-slider.styl
@@ -125,6 +125,7 @@
 
     @media (max-width: 959px)
       padding: 30px 20px
+      z-index: 5
 
   &__icon
     width: 48px
@@ -177,6 +178,10 @@
     background-color: rgba(211, 206, 214, 0.16)
     border-radius: 4px
     margin-right: 15px
+    transition: color 0.3s, ease 0.3s
+
+    &:hover
+      color: #9900FF
 
     &:last-child
       margin-right: 0
@@ -262,6 +267,10 @@
       margin: 0 auto
       padding-top: 20px
       text-align: center
+
+      &.activeNow
+        .news-slider__content
+          z-index: 5
 
       &:nth-child(1), &:nth-child(2)
         &:before
@@ -371,6 +380,9 @@
 
         &:after
           display: none
+
+        .news-slider__content
+          z-index: 5  
 
 .transformThis
   animation: scaleDown 500ms
