--- a/marmelad/_blocks/top-line/top-line.styl
+++ b/marmelad/_blocks/top-line/top-line.styl
@@ -9,6 +9,32 @@
     z-index: 2
     height: 64px
 
+    .search-panel
+      position: absolute
+      top: 0
+      left: 0
+      width: 100%
+      z-index: 10
+      padding-top: 5px
+      padding-bottom: 5px
+      background-color: #FBF7FC
+      opacity: 0
+      visibility: hidden
+      transition: opacity 0.3s, ease 0.3s
+
+      @media (max-width: 1360px)
+        padding-right: 50px
+
+      &._is-show
+        opacity: 1
+        visibility: visible
+
+        .search-panel__field
+          width: 100%
+
+      &__field
+        width: 0
+
   &__inner
     display: flex
     justify-content: space-between
@@ -26,6 +52,10 @@
     .svg-icon
       stroke: #1E0B2E
       fill: transparent
+
+    &:hover
+      .svg-icon
+        stroke: #9900FF !important
 
   &__button-burger
     flex: 0 0 32px
