--- a/marmelad/_blocks/projects-news/projects-news.styl
+++ b/marmelad/_blocks/projects-news/projects-news.styl
@@ -88,6 +88,8 @@
         width: 96px
 
   &__item
+    position: relative
+
     @media (min-width: 1600px)
       opacity: 0
       transition: opacity 1s, ease 1s
@@ -105,7 +107,7 @@
 
         .article-thumb__date
           transition: color 1s, ease 1s
-
+          
     &.swiper-slide-active, &.swiper-slide-next
       opacity: 1
 
