--- a/marmelad/_blocks/article-thumb/article-thumb.styl
+++ b/marmelad/_blocks/article-thumb/article-thumb.styl
@@ -65,8 +65,8 @@
 
   &__img
     text-align: center
+    min-width: 145px
     max-width: 280px
-    width: 100%
     margin-right: auto
     margin: 0 auto 25px auto
     display: block
@@ -78,7 +78,7 @@
       left: 50%
       bottom: -47px
       transform: translateX(-50%)
-      width: 280px
+      width: 100%
       height: 47px
       background: radial-gradient(62.14% 168.18% at 50% -68.18%, #C300FF 0%, rgba(195, 0, 255, 0.88456) 5.21%, rgba(195, 0, 255, 0.148632) 63.54%, rgba(195, 0, 255, 0) 90.54%)
       opacity: 0
