--- a/marmelad/_blocks/articles-day/articles-day.styl
+++ b/marmelad/_blocks/articles-day/articles-day.styl
@@ -85,8 +85,9 @@
 
     @media (max-width: 1279px)
       flex-wrap: wrap
+      justify-content: center
 
-    @media (max-width: 959px)
+    @media (max-width: 767px)
       flex-direction: column
 
   &__col
@@ -95,16 +96,21 @@
     max-width: 385px
     margin-right: 30px
 
+    @media (max-width: 1279px)
+      margin-right: 15px
+
+    @media (max-width: 767px)
+      flex: none
+      width: 100%
+      max-width: 100%
+
     &--slider
       min-height: 660px
 
       @media (max-width: 1279px)
-        flex: 0 0 385px
-        width: 385px
-        max-width: 385px
-        margin-right: 0
-
-      @media (max-width: 1279px)
+        flex: 0 0 320px
+        width: 320px
+        max-width: 320px
         min-height: auto
 
       & ^[0]
@@ -116,38 +122,49 @@
 
     &--left
       @media (max-width: 1279px)
+        flex: 0 0 320px
+        width: 320px
+        max-width: 320px
+
+      @media (max-width: 1023px)
+        margin-left: auto
+
+      @media (max-width: 767px)
         flex: 1 1 auto
         max-width: none
         margin-right: 0
 
       & ^[0]
         &__items
-          @media (max-width: 1279px)
+          @media (max-width: 767px)
             display: flex
             flex-wrap: wrap
 
     &--right
       @media (max-width: 1279px)
+        flex: 0 0 320px
+        width: 320px
+        max-width: 320px
+
+      @media (max-width: 1023px)
+        margin-left: auto
+
+      @media (max-width: 767px)
         flex: 1 1 auto
         width: 100%
         max-width: 100%
 
       & ^[0]
         &__items
-          @media (max-width: 1279px)
+          @media (max-width: 767px)
             display: flex
             flex-wrap: wrap
 
     &:last-child
       margin-right: 0
 
-    @media (max-width: 959px)
-      flex: none
-      width: 100%
-      max-width: 100%
-
   &__items
-    @media (max-width: 1279px)
+    @media (max-width: 767px)
       justify-content: center
 
   &__item
@@ -157,3 +174,8 @@
       padding-right: 15px
       padding-left: 15px
       // margin-bottom: 50px
+
+  .news-slider
+    &__name
+      @media (max-width: 1279px)
+        font-size: 19px
