--- a/marmelad/_blocks/news-slider/news-slider.styl
+++ b/marmelad/_blocks/news-slider/news-slider.styl
@@ -268,6 +268,11 @@
       padding-top: 20px
       text-align: center
 
+      .news-slider__content
+        width: 300px
+        padding-right: 0
+        padding-left: 0
+
       &.activeNow
         .news-slider__content
           z-index: 5
