--- a/marmelad/_blocks/articles-day/articles-day.styl
+++ b/marmelad/_blocks/articles-day/articles-day.styl
@@ -2,7 +2,10 @@
   padding-top: 60px
   text-align: center
 
-  @media (max-width: 1279px)
+  @media (max-width: 1023px)
+    overflow: hidden
+
+  @media (max-height: 659px)
     overflow: hidden
 
   @media (max-width: 959px)
@@ -33,7 +36,12 @@
     padding-bottom: 10px
     margin-bottom: 50px
 
-    @media (min-width: 1280px)
+    @media (min-width: 1024px)
+      position: sticky
+      top: 0
+      z-index: 50
+      
+    @media (min-height: 660px)
       position: sticky
       top: 0
       z-index: 50
@@ -115,7 +123,12 @@
 
       & ^[0]
         &__slider-wrapper
-          @media (min-width: 1280px)
+          @media (min-width: 1024px)
+            position: sticky
+            top: 70px
+            z-index: 55
+
+          @media (min-height: 660px)
             position: sticky
             top: 70px
             z-index: 55
