--- a/marmelad/_blocks/projects-news/projects-news.styl
+++ b/marmelad/_blocks/projects-news/projects-news.styl
@@ -45,6 +45,9 @@
     .swiper-button-prev, .swiper-button-next
       height: 21px
 
+      @media (max-width: 479px)
+        margin-top: -110px
+
       &:after
         content: ''
         width: 26px
@@ -53,17 +56,34 @@
         background-position: 0 0
         background-image: url("data:image/svg+xml,%3Csvg width='26' height='48' viewBox='0 0 26 48' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M24 1.5L3 24L24 46.5' stroke='%231E0B2E' stroke-width='4'/%3E%3C/svg%3E%0A")
 
+        @media (max-width: 479px)
+          width: 28px
+          height: 31px
+          background-image: url("data:image/svg+xml,%3Csvg width='16' height='31' viewBox='0 0 16 31' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M15 1.5L1.93333 15.5L15 29.5' stroke='white' stroke-width='2'/%3E%3C/svg%3E%0A")
+
     .swiper-button-prev
       left: -80px
 
       @media (max-width: 1599px)
         left: -6px
 
+      @media (max-width: 479px)
+        left: 8px
+
+      @media (max-width: 374px)
+        left: 2px
+
     .swiper-button-next
       right: -80px
 
       @media (max-width: 1599px)
         right: -6px
+
+      @media (max-width: 479px)
+        right: 8px
+
+      @media (max-width: 374px)
+        right: 2px
 
       &:after
         transform: rotate(180deg)
@@ -107,7 +127,7 @@
 
         .article-thumb__date
           transition: color 1s, ease 1s
-          
+
     &.swiper-slide-active, &.swiper-slide-next
       opacity: 1
 
